// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pivot /> with default options matches its snapshot 1`] = `
<StyledPivotBase
  className="y-pivot"
  onLinkClick={[Function]}
  selectedKey="1"
>
  <PivotItem
    ariaLabel="test"
    className="y-pivot-item"
    headerText="Tab 1"
    itemKey="1"
    key="1"
  />
  <PivotItem
    className="y-pivot-item"
    headerText="Tab 2"
    itemKey="2"
    key="2"
  />
  <PivotItem
    className="y-pivot-item"
    headerText="Tab 3"
    itemKey="3"
    key="3"
  />
</StyledPivotBase>
`;

exports[`<Pivot /> with isDark as true matches its snapshot 1`] = `
<StyledPivotBase
  className="y-pivot is-dark"
  onLinkClick={[Function]}
  selectedKey="1"
>
  <PivotItem
    ariaLabel="test"
    className="y-pivot-item"
    headerText="Tab 1"
    itemKey="1"
    key="1"
  />
  <PivotItem
    className="y-pivot-item"
    headerText="Tab 2"
    itemKey="2"
    key="2"
  />
  <PivotItem
    className="y-pivot-item"
    headerText="Tab 3"
    itemKey="3"
    key="3"
  />
</StyledPivotBase>
`;
